--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-    "name": "greeter-bot",
-    "version": "1.0.0",
-    "description": "My Bot",
-    "main": "bot.js",
-    "author": "BobTheTurnip",
-    "dependencies": {
-        "discord.io": "^2.5.3",
-        "winston": "^2.4.1"
-    }
+  "name": "Test",
+  "description": "Test",
+  "version": "0.0.0",
+  "main": "bot.js",
+  "scripts": {
+    "start": "node bot.js"
+  },
+  "dependencies": {
+    "discord.js": "11.1.0",
+    "request": "2.81.0"
+  }
 }
